--- a/css/style.css
+++ b/css/style.css
@@ -1,77 +1,16 @@
 @import "reset.css";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&family=Open+Sans:wght@400;700&display=swap");
 
-@import "status-bar.css";
+/* Components */
+@import "components/status-bar.css";
+
+/* screens */
+@import "screens/login.css";
 
 body {
   font-family: "Noto Sans KR", "Open Sans", sans-serif;
   font-weight: 700;
-  background-image: url("backgrounds/bg-aqua.png");
   height: 500vh;
+  background-image: url("backgrounds/bg-aqua.png");
   background-size: 100vw 100vh;
-}
-
-.welcome-header {
-  margin: 20px 0 60px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.welcome-header div {
-  width: 100%;
-  margin-left: 60px;
-}
-.welcome-header p img {
-  width: 25px;
-  height: 25px;
-}
-
-.welcome-header__title {
-  margin-bottom: 70px;
-  font-size: 35px;
-}
-
-.welcome-header__text {
-  font-size: 25px;
-  margin-bottom: 10px;
-}
-
-.login-form {
-  display: flex;
-  flex-direction: column;
-  margin: 0px 30px;
-}
-
-.login-form input {
-  padding: 15px 0px;
-  border: none;
-  font-size: 18px;
-  margin-bottom: 25px;
-  background: inherit;
-}
-
-.login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  transition: border-color 0.3s ease-in-out;
-}
-
-.login-form input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
-}
-
-.login-form input:focus {
-  border-color: black;
-}
-
-.login-form input[type="submit"] {
-  background: linear-gradient(#f4fdef, 50%, #99e648);
-  cursor: pointer;
-  padding: 15px 0px;
-  border-radius: 30px;
-  border: 2px solid black;
-  margin: 30px 15px 0px 15px;
-}
-
-.login-form input[type="submit"]:focus {
-  background: linear-gradient(#f4fdef, 35%, #99e648);
 }
