--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 @import "reset.css";
+@import "variables.css";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&family=Open+Sans:wght@400;700&display=swap");
 
 /* Components */
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-components.css";
 
 /* screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body {
   font-family: "Noto Sans KR", "Open Sans", sans-serif;
