--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -51,7 +51,7 @@
 }
 
 .login-form input[type="submit"] {
-  background: linear-gradient(#f4fdef, 50%, #99e648);
+  background: var(--green);
   cursor: pointer;
   padding: 15px 0px;
   border-radius: 30px;
