Create find page

--- a/css/components/icon-row.css
+++ b/css/components/icon-row.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 5px;
+  padding: 0px var(--horizontal-space);
 }
 
 .icon-row__icon {
