--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 @import "screens/settings.css";
 @import "screens/more.css";
 @import "screens/find.css";
+@import "screens/chat.css";
 
 body {
   font-family: "Noto Sans KR", "Open Sans", sans-serif;
