--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -38,6 +38,7 @@
 
 .open-post__title {
   font-weight: 600;
+  font-size: 20px;
   margin-bottom: 7px;
 }
 
@@ -83,6 +84,7 @@
   width: 120px;
   height: 120px;
   border-radius: 10%;
+  border: 1px solid black;
 }
 
 .open-post__heart-count {
