update body image

--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,3 +1,6 @@
+.find-screen {
+  background-image: url("../backgrounds/bg-pink.png");
+}
 .recommended-friends {
   margin: 25px 0px;
   padding: 25px 0px;
