--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -3,7 +3,7 @@
   z-index: 99;
   height: 100vh;
   width: 100vw;
-  background: url("http://m.gettywallpapers.com/wp-content/uploads/2022/08/Wallpaper-Y2K-1024x576.jpg");
+  background: url("../backgrounds/Wallpaper-Y2K.jpg");
   background-size: 100vw 100vh;
   display: flex;
   top: 0;
