--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,3 +1,6 @@
+.friends-screen__body {
+  background-image: url("../backgrounds/bg-aqua.png");
+}
 .friends-display-link {
   text-align: center;
   text-decoration: none;
