--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -40,7 +40,7 @@
 
 @keyframes fadeIn {
   from {
-    transform: translateY(-10px);
+    transform: translateY(20px);
     opacity: 0;
   }
   to {
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  animation: fadeIn 0.3s linear;
+  animation: fadeIn 1s ease-in-out;
 }
 
 .chat-screen {
