--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -62,3 +62,28 @@
 .login-form input[type="submit"]:focus {
   background: linear-gradient(#f4fdef, 35%, #99e648);
 }
+
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.splash-screen {
+  background-image: no-repeat url("../backgrounds/splash.jpg");
+  background-size: cover;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 80px;
+  animation: hideSplashScreen 0.5s ease-in-out forwards;
+  animation-delay: 1.5s;
+}
